[tool.poetry]
name = "progpysmt"
version = "0.1.0"
description = "A Python parser for SMT-LIB, SyGuS and ProgSynth formats."
authors = ["Gaëtan MARGUERITTE <gamargueritte@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
