[tool.poetry]
name = "progpysmt"
version = "0.1.0"
description = "A Python parser for SMT-LIB, SyGuS and ProgSynth formats."
authors = ["Gaëtan MARGUERITTE <gamargueritte@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "progpysmt"}]

[tool.poetry.dependencies]
python = "^3.10"
cython = "^3.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

